--- a/web/templates/prescricao.html
+++ b/web/templates/prescricao.html
@@ -1,8 +1,8 @@
 <doctype html>
-    <title>Inserir instituição</title>
+    <title>Inserir prescrição</title>
     <body style="font-family:Arial; font-size:20px;">
         <form action="insert_prescricao" method="post"> 
-        <h5>Preencha os dados da instituição</h5>
+        <h5>Preencha os dados da prescrição</h5>
         <div class="form-group">
             <p><input class="form-control" type="number" name="num_cedula" placeholder="Número de cédula"></p>
         </div>
@@ -10,7 +10,7 @@
             <p><input class="form-control" type="number" name="num_doente" placeholder="Número de doente"></p>
         </div>
         <div class="form-group">
-            <p><input class="form-control" type="datetime-local" step="1" name="dia_hora" placeholder="Data"></p>
+            <p><input class="form-control" type="text" name="dia_hora" placeholder="Data"></p>
         </div>
         <div class="form-group">
             <p><input class="form-control" type="text" name="substancia" placeholder="Substância"></p>
