--- a/web/templates/alterar_prescricao.html
+++ b/web/templates/alterar_prescricao.html
@@ -1,10 +1,10 @@
 <doctype html>
-    <title>Alterar instituição</title>
+    <title>Alterar prescrição</title>
     <body style="font-family:Arial; font-size:20px;">
         <form action="update_prescricao" method="post"> 
-        <h5>Insira os novos dados da instituição</h5>
+        <h5>Insira os novos dados da prescrição</h5>
         <div class="form-group">
-            <p><input class="form-control" type="hidden" name="num_cedula" value="{{ params.get('nome') }}" placeholder="Número"></p>
+            <p><input class="form-control" type="hidden" name="num_cedula" value="{{ params.get('num_cedula') }}" placeholder="Número"></p>
         </div>
         <div class="form-group">
             <p><input class="form-control" type="hidden" name="num_doente" value="{{ params.get('num_doente') }}" placeholder="Número"></p>
@@ -17,13 +17,13 @@
             <p><input class="form-control" type="hidden" name="substancia" value="{{ params.get('substancia') }}" placeholder="Substância"></p>
         </div>
         <div class="form-group">
-            <p>Cédula do médico: <input class="form-control" type="number" name="nova_cedula" value="{{ params.get('nome') }}" placeholder="Número"></p>
+            <p>Cédula do médico: <input class="form-control" type="number" name="nova_cedula" value="{{ params.get('num_cedula') }}" placeholder="Número"></p>
         </div>
         <div class="form-group">
-            <p>Cédula do doente: <input class="form-control" type="datetime-local" step="1" name="novo_doente" value="{{ params.get('num_doente') }}" placeholder="Número"></p>
+            <p>Cédula do doente: <input class="form-control" type="number" name="novo_doente" value="{{ params.get('num_doente') }}" placeholder="Número"></p>
         </div>
         <div class="form-group">
-            <p>Data: <input class="form-control" type="datetime-local" step="1" name="nova_data" value="{{ params.get('dia_hora') }}" placeholder="Data"></p>
+            <p>Data: <input class="form-control" type="datetime-local" step="1" name="nova_data"  value="{{ params.get('dia_hora') }}" placeholder="Data"></p>
 
         </div>
         <div class="form-group">
