--- a/web/templates/listar_analises.html
+++ b/web/templates/listar_analises.html
@@ -30,8 +30,7 @@
                             <td>{{ record[6] }}</td>
                             <td>{{ record[7] }}</td>
                             <td>{{ record[8] }}</td>
-                            <td><a href="alterar_analise?num_analise={{ record[0] }}&especialidade={{ record[1] }}&num_cedula={{ record[2] }}&num_doente={{ record[3] }}
-                                &dia_hora={{ record[4] }}&data_registo={{ record[5] }}&nome={{ record[6] }}&quant={{ record[7] }}&inst={{ record[8] }}">Alterar</a></td>
+                            <td><a href="alterar_analise?num_analise={{ record[0] }}&especialidade={{ record[1] }}&num_cedula={{ record[2] }}&num_doente={{ record[3] }}&dia_hora={{ record[4] }}&data_registo={{ record[5] }}&nome={{ record[6] }}&quant={{ record[7] }}&inst={{ record[8] }}">Alterar</a></td>
                             <td><a href="remover_analise?num_analise={{ record[0] }}">Remover</a></td>
                         </tr>
                     {% endfor %}
